[gd_scene load_steps=7 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://FiraCode.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://font.tres" type="DynamicFont" id=3]

[sub_resource type="DynamicFont" id=1]
size = 24
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 24
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 21
use_filter = true
font_data = ExtResource( 2 )

[node name="main" type="Node2D"]
script = ExtResource( 1 )

[node name="Control" type="Node" parent="."]

[node name="Panel" type="Panel" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="ColorRect" parent="Control/Panel"]
margin_left = 509.881
margin_right = 1024.88
margin_bottom = 600.0
color = Color( 0.0941176, 0.101961, 0.14902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="input" type="LineEdit" parent="Control/Panel"]
anchor_left = 0.029
anchor_top = 0.8
anchor_right = 0.328
anchor_bottom = 0.938
margin_left = 0.303999
margin_right = 0.127991
margin_bottom = 0.200012
hint_tooltip = "insert number here"
custom_fonts/font = SubResource( 1 )
text = "test"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="terminal" type="Label" parent="Control/Panel"]
anchor_left = 0.02
anchor_top = 0.033
anchor_right = 0.48
anchor_bottom = 0.75
margin_left = -0.480001
margin_top = 0.200001
margin_right = 0.47998
margin_bottom = -3.05176e-05
custom_fonts/font = SubResource( 2 )
text = "Numeral Converter Program"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="output" type="RichTextLabel" parent="Control/Panel"]
anchor_left = 0.521
anchor_top = 0.035
anchor_right = 0.98
anchor_bottom = 0.77
margin_left = -0.838867
margin_right = -0.854858
margin_bottom = -3.05176e-05
hint_tooltip = "hasil output disini"
custom_fonts/normal_font = SubResource( 3 )
text = "output here.."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="convert_button" type="Button" parent="Control/Panel"]
anchor_left = 0.352
anchor_top = 0.8
anchor_right = 0.471
anchor_bottom = 0.938
margin_left = -0.448029
margin_right = -0.304016
margin_bottom = 0.200012
custom_fonts/font = ExtResource( 3 )
text = "convert"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="clear_button" type="Button" parent="Control/Panel"]
anchor_left = 0.815
anchor_top = 0.8
anchor_right = 0.971
anchor_bottom = 0.938
margin_left = 0.439941
margin_right = -0.304077
margin_bottom = 0.200012
hint_tooltip = "clear log"
custom_fonts/font = ExtResource( 3 )
text = "clear"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionButton" type="OptionButton" parent="Control/Panel"]
anchor_left = 0.146
anchor_top = 0.14
anchor_right = 0.334
anchor_bottom = 0.189
margin_left = 0.495987
margin_top = 0.283478
margin_right = -0.0160217
margin_bottom = -0.116531
text = "dec to bin"
align = 1
items = [ "dec to bin", null, true, 0, null, "dec to hex", null, true, 1, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="text_entered" from="Control/Panel/input" to="." method="_on_input_text_entered"]
[connection signal="pressed" from="Control/Panel/convert_button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Control/Panel/clear_button" to="." method="_on_clear_button_pressed"]
